# AIDoctor

./: .gitattributes  .gitignore  README.md  llm_env.yml  project.config.json  project.private.config.json
backend/: .env  .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  chat.py  members.py  notifications.py  reminders.py
backend/app/core/: __init__.py  config.py  database.py  redis.py  security.py
backend/app/models/: __init__.py  chat.py  member.py  reminder.py  user.py
backend/app/schemas/: __init__.py  auth.py  chat.py  common.py  member.py  reminder.py
backend/app/services/: __init__.py  chat_service.py  context_service.py  gatekeeper.py  memory_service.py
docs/: PHASE2_SUMMARY.md  PHASE3_PLAN.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md
docs/PRD/: PRDV6.0.md
docs/notes/: 【AI私人医生项目day02】—— 模型微调（环境配置篇）.md
fortend/: .env.example  README.md  index.html  pnpm-lock.yaml
llm/: README.md  model-test.py  work.ipynb
llm/ms-swift/: .gitignore  .pre-commit-config.yaml  .pre-commit-config_local.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  MANIFEST.in  Makefile  README.md  README_CN.md  requirements.txt  setup.cfg  setup.py
llm/prompts/: system_prompt.txt
llm/train_data/: .gitattributes  .msc  DISC-Med-SFT.json  DISC-Med-SFT_released.csv  MedDialog-data_prossing.py  README.md  custom_dataset.json  (+3 more)
miniprogram/: README.md  app.js  app.json  app.wxss  project.config.json
notes/: 【AI私人家庭医生day01】—— 项目介绍（2026-04-15更新中...）.md
(+1194 files in other folders)
